tests/string/unknown_escape_is_parse.err.expected
error: at 4:9: [PARSE-InvalidLiteral] In function 'f', block 'entry': unknown escape sequence: \q
   |
 4 |     s = b"\q";
   |         ^^^^^
